--- a/index.html
+++ b/index.html
@@ -19,3 +19,12 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "oAJAXeaweDx9Jczme",
+      });
+   })();
